<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SensorTagActivity$DummySectionFragment">

    <TextView
        android:id="@+id/section_not_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_label_not_connected"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/section_not_connected"
            android:layout_alignLeft="@+id/section_not_connected"
            android:id="@+id/humidity_details"
            android:visibility="gone">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/humidity_label_temperature"
                android:id="@+id/humidity_details_temperature_label"
                android:layout_gravity="left|center_vertical"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_na"
                android:id="@+id/humidity_details_temperature_value"
                android:layout_gravity="left|center_vertical"/>

        <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/humidity_label_relative"
                android:id="@+id/humidity_details_relative_label"
                android:layout_gravity="left|center_vertical"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_na"
                android:id="@+id/humidity_details_relative_value"
                android:layout_gravity="left|center_vertical"/>
    </LinearLayout>

</RelativeLayout>
